--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.5
   flutter_dotenv: ^5.0.2
   font_awesome_flutter: ^10.3.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
